--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -28,9 +28,6 @@
         img {
           max-height: unset;
         }
-        .tag {
-          margin-left: 1rem;
-        }
         .navbar-burger {
           align-self: center;
           font-size: 1.5rem;
@@ -69,9 +66,5 @@
   }
   .button {
     min-width: 120px;
-  }
-  .tag.is-warning {
-    border-radius: 0;
-    transform: rotate(-4deg);
   }
 }
